--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "https": "^1.0.0",
+    "mongoose": "^7.1.1",
+    "node-fetch": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
