--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "kubstu_back",
+  "name": "kubstu_back2",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,9 +24,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "dotenv": "^16.3.1",
     "https": "^1.0.0",
-    "mongoose": "^7.1.1",
+    "mongoose": "^7.3.1",
     "node-fetch": "^3.3.1",
+    "node-html-parser": "^6.1.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
